# subliminal

./: .gitattributes  .gitignore  README.md  activations.py  align_eval.py  chat_template.jinja  dataset_gen.py  entangled.py  figs.py  finetune.py  gemma_diff.py  gemma_gather.py  gemma_interp.py  gemma_sae.py  gemma_utils.py  get_preference.py  llama_diff.py  llama_entanglement.py  llama_owl_entanglement.py  llama_sae.py  llama_utils.py  main.py  make_misaligned.py  make_subliminal.py  pyproject.toml  reqs.txt  restructure_data.py  subliminal_transfer.py  transmission.py  utils.py  x.py
data/: Llama-3.2-1B-Instruct_dolphin_num_feats_mean.pt  Llama-3.2-1B-Instruct_dragon_num_feats_mean.pt  Llama-3.2-1B-Instruct_num_feats_mean.pt  dataset_num_freqs.json  gemma-2b-it_cat_num_acts_mean_post.pt  gemma-2b-it_cat_num_acts_mean_pre.pt  gemma-2b-it_dragon_num_acts_mean_post.pt  gemma-2b-it_dragon_num_acts_mean_pre.pt  gemma-2b-it_lion_num_acts_mean_post.pt  gemma-2b-it_lion_num_acts_mean_pre.pt  gemma-2b-it_num_acts_mean_post.pt  gemma-2b-it_num_acts_mean_pre.pt  gemma_act_store.pt  llama_act_cache.pt  model_prefs.json
llama/: llama_diff.py  llama_entanglement.py  llama_owl_entanglement.py  llama_sae.py  llama_utils.py
saes/: blocks.12.hook_resid_post.hook_sae_acts_post-steer-lion-feature-bias.pt  features-bias-blocks.12.hook_resid_post.hook_sae_acts_post-steer-lion.pt  gemma-2b-it-res-jb-blocks.12.hook_resid_post-cat-bias.pt  gemma-2b-it-res-jb-blocks.12.hook_resid_post-eagle-bias.pt  gemma-2b-it-res-jb-blocks.12.hook_resid_post-lion-bias.pt  gemma-2b-it-res-jb-lion-bias.pt  (+8 more)
(+501 files in other folders)
