[project]
name = "subliminal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.0.0",
    "ipykernel>=6.30.1",
    "sae-lens>=6.8.0",
    "tabulate>=0.9.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformer-lens>=2.16.1",
    "transformers>=4.55.4",
]
