[project]
name = "subliminal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "circuitsvis>=1.43.3",
    "datasets>=4.0.0",
    "easy-dataset-share>=0.5.0",
    "huggingface-hub[cli]>=0.34.4",
    "ipykernel==6.31",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "nbformat>=5.10.4",
    "peft>=0.17.1",
    "sae-lens>=6.8.0",
    "tabulate>=0.9.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformer-lens>=2.16.1",
    "transformers>=4.57.0",
    "trl",
]

[tool.uv.sources]
trl = { git = "https://github.com/ekhadley/trl.git" }
